// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. an error page 1`] = `<ArticleListPageError />`;

exports[`2. a loading state 1`] = `
<topicArticlesProvider>
  <ArticleList
    articleListHeader={
      <TopicHead
        isLoading={true}
        name=""
      />
    }
    articles={
      Array [
        Object {
          "headline": "Headline 1",
          "id": "d98c257c-cb16-11e7-b529-95e3fc05f40f",
          "url": "https://article1.io",
        },
      ]
    }
    count={7}
    emptyStateMessage="e68a9e92b17f4f4171c55353e2bab553"
    imageRatio={1.25}
    page={1}
    pageSize={10}
    showImages={true}
  />
</topicArticlesProvider>
`;

exports[`3. an article list 1`] = `
<topicArticlesProvider>
  <ArticleList
    articleListHeader={
      <TopicHead
        description={
          Array [
            Object {
              "attributes": Object {
                "value": "Test ",
              },
              "children": Array [],
              "name": "text",
            },
            Object {
              "attributes": Object {},
              "children": Array [
                Object {
                  "attributes": Object {
                    "value": "italic ",
                  },
                  "children": Array [],
                  "name": "text",
                },
              ],
              "name": "italic",
            },
            Object {
              "attributes": Object {},
              "children": Array [
                Object {
                  "attributes": Object {
                    "value": "bold",
                  },
                  "children": Array [],
                  "name": "text",
                },
              ],
              "name": "bold",
            },
            Object {
              "attributes": Object {
                "value": " text.",
              },
              "children": Array [],
              "name": "text",
            },
          ]
        }
        isLoading={false}
        name="Test Name"
      />
    }
    articles={
      Array [
        Object {
          "headline": "Headline 1",
          "id": "d98c257c-cb16-11e7-b529-95e3fc05f40f",
          "url": "https://article1.io",
        },
      ]
    }
    count={7}
    emptyStateMessage="e68a9e92b17f4f4171c55353e2bab553"
    imageRatio={1.25}
    page={2}
    pageSize={10}
    showImages={true}
  />
</topicArticlesProvider>
`;

exports[`4. fetches more articles 1`] = `
<topicArticlesProvider>
  <ArticleList
    articleListHeader={
      <TopicHead
        description={
          Array [
            Object {
              "attributes": Object {
                "value": "Test ",
              },
              "children": Array [],
              "name": "text",
            },
            Object {
              "attributes": Object {},
              "children": Array [
                Object {
                  "attributes": Object {
                    "value": "italic ",
                  },
                  "children": Array [],
                  "name": "text",
                },
              ],
              "name": "italic",
            },
            Object {
              "attributes": Object {},
              "children": Array [
                Object {
                  "attributes": Object {
                    "value": "bold",
                  },
                  "children": Array [],
                  "name": "text",
                },
              ],
              "name": "bold",
            },
            Object {
              "attributes": Object {
                "value": " text.",
              },
              "children": Array [],
              "name": "text",
            },
          ]
        }
        isLoading={false}
        name="Test Name"
      />
    }
    articles={
      Array [
        Object {
          "headline": "Headline 1",
          "id": "d98c257c-cb16-11e7-b529-95e3fc05f40f",
          "url": "https://article1.io",
        },
        Object {
          "headline": "Headline 3",
          "id": "d98c257c-cb16-11e7-b529-95e3fc05f40h",
          "url": "https://article3.io",
        },
      ]
    }
    count={7}
    emptyStateMessage="e68a9e92b17f4f4171c55353e2bab553"
    imageRatio={1.25}
    page={2}
    pageSize={10}
    showImages={true}
  />
</topicArticlesProvider>
`;

exports[`5. fetches more articles and falls back to previous data if no more 1`] = `
<topicArticlesProvider>
  <ArticleList
    articleListHeader={
      <TopicHead
        description={
          Array [
            Object {
              "attributes": Object {
                "value": "Test ",
              },
              "children": Array [],
              "name": "text",
            },
            Object {
              "attributes": Object {},
              "children": Array [
                Object {
                  "attributes": Object {
                    "value": "italic ",
                  },
                  "children": Array [],
                  "name": "text",
                },
              ],
              "name": "italic",
            },
            Object {
              "attributes": Object {},
              "children": Array [
                Object {
                  "attributes": Object {
                    "value": "bold",
                  },
                  "children": Array [],
                  "name": "text",
                },
              ],
              "name": "bold",
            },
            Object {
              "attributes": Object {
                "value": " text.",
              },
              "children": Array [],
              "name": "text",
            },
          ]
        }
        isLoading={false}
        name="Test Name"
      />
    }
    articles={
      Array [
        Object {
          "headline": "Headline 1",
          "id": "d98c257c-cb16-11e7-b529-95e3fc05f40f",
          "url": "https://article1.io",
        },
      ]
    }
    count={7}
    emptyStateMessage="e68a9e92b17f4f4171c55353e2bab553"
    imageRatio={1.25}
    page={2}
    pageSize={10}
    showImages={true}
  />
</topicArticlesProvider>
`;

exports[`6. an article list header 1`] = `
<div>
  <div>
    <h1>
      Test Name
    </h1>
    <div />
    <div>
      Test 
      <i>
        italic 
      </i>
      <b>
        bold
      </b>
       text.
    </div>
  </div>
</div>
`;

exports[`7. a topic header with no description 1`] = `
<div>
  <div>
    <h1>
      No Desc
    </h1>
  </div>
</div>
`;

exports[`8. an article list header loading 1`] = `<div />`;
